# cppSQL_exercise

./: .gitignore  CMakeLists.txt  README.md  main.cpp
conan/: conanfile.txt
data/: mydata.db
dbCom/: mydata.hpp  utils.cpp  utils.h
download/: download.cpp  download.h
download/dns/: DNSServer.cpp  DNSServer.h  uri.cpp  uri.h
progressbar/: progressbar.cpp  progressbar.h
test/: CMakeLists.txt  ch11.cpp  ch12.cpp  ch13.cpp  ch14.cpp  ch15.cpp  condition.cpp  test_progressbar.cpp
test/delete/: ch10.cpp
test/insert/: ch8.cpp
test/select/: ch1.cpp  ch2.cpp  ch3.cpp  ch4.cpp  ch5.cpp  ch6.cpp  ch7.cpp
test/update/: ch9.cpp
